embedded the zxing.dll as resource

--- a/QR_GEN.csproj
+++ b/QR_GEN.csproj
@@ -108,7 +108,7 @@
     <None Include="src\App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="libs\zxing.dll" />
+    <EmbeddedResource Include="libs\zxing.dll" />
     <Content Include="src\qr.ico" />
   </ItemGroup>
   <ItemGroup>
