--- a/QR_GEN.csproj
+++ b/QR_GEN.csproj
@@ -72,6 +72,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\controls\CustomPictureBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="src\Generator.cs" />
     <Compile Include="src\Window.cs">
       <SubType>Form</SubType>
