--- a/QR_GEN.csproj
+++ b/QR_GEN.csproj
@@ -55,7 +55,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="QRCoder, Version=1.3.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\QRCoder.1.3.2\lib\net40\QRCoder.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Desktop\QRCoder.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -73,6 +74,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\AsciiWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\AsciiWindow.Designer.cs">
+      <DependentUpon>AsciiWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\controls\CustomPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -91,6 +98,9 @@
     </Compile>
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="src\AsciiWindow.resx">
+      <DependentUpon>AsciiWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="src\controls\QRDisplay.resx">
       <DependentUpon>QRDisplay.cs</DependentUpon>
     </EmbeddedResource>
